# competitive_programming

./: .clang-format  .gitignore  11456_trainsorting.cpp  CMakeLists.txt  README.md  _Makefile  base.hpp  base_old.hpp  big_uint.hpp  bit.hpp  bit_mask.hpp  code_format.sh  generate.pl  io.hpp  makefiles.pl  matrix.hpp  point.hpp  position.hpp  rational.hpp  run.sh  segment.hpp  util.hpp
dynamic_programming/: 00108_maximum_sum.cpp  00147_dollars.cpp  00164_string_computer.cpp  00216_getting_in_line.cpp  00348_optimal_array_mult_seq.cpp  00357_count_the_ways.cpp  00437_tower_of_babylon.cpp  00507_jill_rides_again.cpp  00526_string_distance.cpp  00562_dividing_coins.cpp  00674_coin_change.cpp  00990_diving_for_gold.cpp  01252_twenty_questions.cpp  01372_log_jumping.cpp  10003_cutting_sticks.cpp  10496_collecting_beepers.cpp  10604_chemical_reaction.cpp  10651_pebble_solitaire.cpp  10664_luggage.cpp  10684_jackpot.cpp  10684_the_jackpot.cpp  10723_cyborg_genes.cpp  108_maximum_sum.cpp  10934_dropping_water_balloons.cpp  11137_ingenuous_cubrency.cpp  11456_trainsorting.cpp  11517_exact_change.cpp  11584_partitioning_by_palindromes.cpp  11658_best_coalitions.cpp  11658_best_coalitions.exe.stackdump  11691_allergy_test.cpp  12105_bigger_is_better.cpp  12105_bigger_is_better_big_uint.cpp  147_dollars.cpp  357_count_the_ways.cpp  507_jill_rides_again.cpp  526_string_distance.cpp  562_dividing_coins.cpp  674_coin_change.cpp  990_diving_for_gold.cpp  (+12 more)
geometry/: 00109_scud_busters.cpp  00218_moth_eradication.cpp  00270_lining_up.cpp  00361_cops_and_robbers.cpp  00833_water_falls.cpp  11227_the_silver_bullet.cpp  Makefile  point.hpp
greedy/: 01372_log_jumping.cpp  11691_allergy_test.cpp
ihpcc/: CMakeLists.txt
include/: base.hpp  base_mpi.hpp  big_uint.hpp  bit.hpp  bit_mask.hpp  dp_coin_change.hpp  dp_edit_distance.hpp  dp_tsp.hpp  dp_zero_one_knapsack.hpp  io.hpp  io_old.hpp  list.hpp  matrix.hpp  matrix_io.hpp  mpi.hpp  oj.hpp  point.hpp  position.hpp  primes.hpp  sci_io.hpp  static_bit_mask.hpp  static_matrix.hpp  uptr_binary_tree.hpp  uptr_list.hpp  util.hpp
input/: 00240_var_radix_huffman_encoding.txt  00551_nesting_bunch_of_brackets.txt  10061_how_many_zeros_digits.txt  10319_manhattan.txt  11171_sms.txt  12697_min_subarray_length.txt
math/: 02323_mod_mult_of_polynomials_x.cpp  10870_recurrences.cpp  2323_mod_mult_of_polynomials.cpp  684_integral_determinant_bareiss.cpp
misc/: CMakeLists.txt
output/: 10061_how_many_zeros_digits.txt  10319_manhattan.txt  11171_sms.my  11171_sms.txt  12697_min_subarray_length.my
src/: 00108_maximum_sum.cpp  00109_scud_busters.cpp  00112_tree_summing.cpp  00147_dollars.cpp  00164_string_computer.cpp  00200_rare_order.cpp  00216_getting_in_line.cpp  00218_moth_eradication.cpp  00222_budget_travel.cpp  00240_var_radix_huffman_encoding.cpp  00259_software_allocation.cpp  00264_count_on_cantor.cpp  00270_lining_up.cpp  00294_divisors.cpp  00334_identifying_concurrent_events.cpp  00348_optimal_array_mult_seq.cpp  00350_pseudo_random_numbers.cpp  00361_cops_and_robbers.cpp  00429_word_transformation.cpp  00437_tower_of_babylon.cpp  00454_anagrams.cpp  00455_periodic_strings.cpp  00459_graph_connectivity.cpp  00469_wetlands_of_florida.cpp  00481_what_goes_up.cpp  00501_black_box.cpp  (+114 more)
src/ihpcc/: CMakeLists.txt
src/misc/: CMakeLists.txt  array_to_bst.txt  array_unit_adjacent_diff_search.txt  binary_sorted_array_transition_point.cpp  binary_sorted_array_transition_point.txt  binary_tree_diameter.txt  binary_tree_top_view.cpp  bitonic_array_search.cpp  bitonic_array_search.txt  common_elements_in_three_arrays.cpp  common_elements_in_three_arrays.txt  connection_point_y_linked_lists.cpp  connection_point_y_linked_lists.txt  count_anagram_substrings.cpp  count_anagram_substrings.txt  count_smaller_on_right.cpp  count_smaller_on_right.txt  count_squares_in_postal_codes.txt  count_triplets.cpp  count_triplets.txt  divisibility_binary_stream.cpp  divisibility_binary_stream.txt  equilibrium_point.cpp  equilibrium_point.txt  floor_sqrt.txt  generate_parentheses.cpp  generate_parentheses.txt  has_subset_with_sum.cpp  is_linked_list_palindrome.txt  is_subtree_1.txt  kahan_summation.cpp  kahan_summation.txt  kth_element_in_row_col_sorted_matrix.cpp  kth_element_in_row_col_sorted_matrix.txt  largest_number_with_k_swaps.cpp  largest_number_with_k_swaps.txt  largest_rect_in_histogram.cpp  largest_rect_in_histogram.txt  largest_square_in_bool_matrix.cpp  largest_square_in_bool_matrix.txt  (+66 more)
src/sci/: 01_30_kahan_summation.cpp  02_08_shift_and_subtract_division.cpp  05_09_jacobi_method.cpp  09_23_jacobi_method.cpp  10_03_uniform_distribution_on_sphere.cpp  CMakeLists.txt  jacobi_method.cpp  kahan_summation.cpp  shift_and_subtract_division.cpp
src/uva/: 00108_maximum_sum.cpp  00108_maximum_sum.txt  00109_scud_busters.cpp  00109_scud_busters.txt  00112_tree_summing.cpp  00112_tree_summing.txt  00120_stacks_of_flapjacks.txt  00122_trees_on_the_level.cpp  00122_trees_on_the_level.txt  00140_bandwidth.cpp  00140_bandwidth.txt  00147_dollars.txt  00164_string_computer.cpp  00164_string_computer.txt  00200_rare_order.cpp  00200_rare_order.txt  00216_getting_in_line.cpp  00216_getting_in_line.txt  00218_moth_eradication.cpp  00218_moth_eradication.txt  00222_budget_travel.cpp  00222_budget_travel.txt  00240_var_radix_huffman_encoding.cpp  00240_var_radix_huffman_encoding.txt  00259_software_allocation.cpp  00259_software_allocation.txt  00264_count_on_cantor.cpp  00264_count_on_cantor.txt  00270_lining_up.cpp  00270_lining_up.txt  00294_divisors.cpp  00294_divisors.txt  00334_identifying_concurrent_events.cpp  00334_identifying_concurrent_events.txt  00348_optimal_array_mult_seq.cpp  00348_optimal_array_mult_seq.txt  00350_pseudo_random_numbers.cpp  00350_pseudo_random_numbers.txt  00353_pesky_palindromes.cpp  00353_pesky_palindromes.txt  (+345 more)
src/uva/categories/graphs/topological_sort/: 00124_following_orders.cpp  11060_beverages.cpp  11686_pick_up_sticks.cpp
src/uva/categories/hash_table/: 10282_babelfish.cpp
src/uva/categories/merge_sort/: 10810_ultra_quicksort.cpp
(+383 files in other folders)
