cmake_minimum_required(VERSION 3.12)
project(ihpcc)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(MPI)

if(MPI_CXX_FOUND)
	file(GLOB CPP_FILES "[^-]*.cpp")
	foreach(CPP_FILE ${CPP_FILES})
		get_filename_component(F_NAME ${CPP_FILE} NAME_WE)
		add_executable(${F_NAME} ${CPP_FILE})
		target_compile_definitions(${F_NAME} PUBLIC OFFLINE_JUDGE)
		target_include_directories(${F_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/include" ${MPI_INCLUDE_PATH})
		target_link_libraries(${F_NAME} ${MPI_LIBRARIES})
		if(MPI_COMPILE_FLAGS)
			set_target_properties(${F_NAME} PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
		endif()
		if(MPI_LINK_FLAGS)
			set_target_properties(${F_NAME} PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
		endif()
		target_compile_features(${F_NAME} PUBLIC cxx_std_17)
		target_compile_options(${F_NAME} PUBLIC -Wall -Wpedantic -Wextra -Werror=return-type -m64 -march=native 
			$<$<CONFIG:DEBUG>:-O0 -g> $<$<CONFIG:RELEASE>:-Wno-unused-parameter -Wno-deprecated-declarations -O3 -DNDEBUG>)
	endforeach()
endif()
